DBE-26267 Column pinning for wide tables (behind a flag)
Freeze selected columns in a leading strip while the remaining columns scroll. The feature is off by default behind the database.grid.column.pinning registry flag.

Keep selection, navigation, editing, sizing, sorting, and persisted state synchronized across the frozen and main tables. Includes DBE-26203 pin-state persistence.

GitOrigin-RevId: 107d2c63de3becb2565ebb7595bbfc78aace81e9