@@ -40,12 +40,14 @@ import com.intellij.database.run.ui.ResultViewWithCells;
 import com.intellij.database.run.ui.ResultViewWithColumns;
 import com.intellij.database.run.ui.ResultViewWithRows;
 import com.intellij.database.run.ui.TableAggregatorWidgetHelper;
+import com.intellij.database.run.ui.TableResultPanel;
 import com.intellij.database.run.ui.ValueTabInfoProvider;
 import com.intellij.database.run.ui.grid.CellAttributes;
 import com.intellij.database.run.ui.grid.CellRenderingUtils;
 import com.intellij.database.run.ui.grid.DataGridSearchSession;
 import com.intellij.database.run.ui.grid.DummyGridColumnLayout;
 import com.intellij.database.run.ui.grid.GridColorsScheme;
+import com.intellij.database.run.ui.grid.GridRowHeader;
 import com.intellij.database.run.ui.grid.GridSearchSession;
 import com.intellij.database.run.ui.grid.JBTableWithResizableCells;
 import com.intellij.database.run.ui.grid.ResizableCellEditorsSupport;
@@ -123,6 +125,7 @@ import it.unimi.dsi.fastutil.ints.IntList;
 import it.unimi.dsi.fastutil.objects.Reference2ObjectOpenHashMap;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.TestOnly;
 
 import javax.swing.AbstractAction;
 import javax.swing.Action;
@@ -191,8 +194,10 @@ import java.util.OptionalInt;
 import java.util.TreeMap;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
+import java.util.function.IntBinaryOperator;
 import java.util.function.IntUnaryOperator;
 import java.util.function.Supplier;
+
 import static com.intellij.database.datagrid.GridUtilKt.isArrayCell;
 import static com.intellij.database.datagrid.GridUtilKt.setupDynamicRowHeight;
 import static com.intellij.database.run.ui.DataAccessType.DATA_WITH_MUTATIONS;
@@ -244,22 +249,43 @@ public final class TableResultView extends JBTableWithResizableCells
   private Ref<Object> myCommonValue;
   private boolean myWasAutomaticallyTransposed = false;
   private boolean myDisableSelectionListeners = false;
-  private boolean myIsShowRowNumbers;
   private Consumer<Boolean> myColumnHeaderBgListener;
   private Boolean myIsTransparentColumnHeaderBg;
   private boolean myAllowMultilineColumnLabel = false;
   private final AtomicInteger editingBlocked = new AtomicInteger(0); // TODO: currently only locks column reordering
   private HoveredRowBgHighlightMode myHoveredRowMode = HoveredRowBgHighlightMode.AUTO;
+  @SuppressWarnings({"FieldCanBeLocal", "unused"}) // held for its lifetime; it installs the floating toolbar/actions
   private final TableFloatingToolbar myFloatingToolbar;
 
   private StatisticsTableHeader myStatisticsHeader;
 
   private static final Logger LOG = Logger.getInstance(TableResultView.class);
 
+  /** True when this view is the pinned frozen strip, which shares the grid data but not grid-global concerns
+   * like status widgets, the floating toolbar, data-grid listeners, or drag-reorder. */
+  private final boolean myIsFrozenStrip;
+  private final FrozenColumnsController myFrozenColumnsController;
+  private Int2ObjectMap<ColumnWidthState> myUntransposedColumnWidths;
+
+  private record ColumnWidthState(int width, boolean setByUser) {
+  }
+
   public TableResultView(@NotNull DataGrid resultPanel,
                          @NotNull ActionGroup columnHeaderPopupActions,
                          @NotNull ActionGroup rowHeaderPopupActions) {
+    this(resultPanel, columnHeaderPopupActions, rowHeaderPopupActions, null);
+  }
+
+  TableResultView(@NotNull DataGrid resultPanel,
+                  @NotNull ActionGroup columnHeaderPopupActions,
+                  @NotNull ActionGroup rowHeaderPopupActions,
+                  @Nullable FrozenColumnsController frozenColumnsController) {
     super(new RegularGridTableModel(resultPanel), new MyTableColumnModel());
+    myIsFrozenStrip = frozenColumnsController != null;
+    myFrozenColumnsController = frozenColumnsController == null
+                                ? new FrozenColumnsController(this, resultPanel, columnHeaderPopupActions, rowHeaderPopupActions)
+                                : frozenColumnsController;
+    ((MyTableColumnModel)getColumnModel()).setMoveTargetAdjuster(this::adjustColumnMoveTarget);
     myResultPanel = resultPanel;
     myCellImageCache = new TableCellImageCache(this, this);
     myColumnHeaderPopupActions = columnHeaderPopupActions;
@@ -289,49 +315,111 @@ public final class TableResultView extends JBTableWithResizableCells
 
     adjustDefaultActions();
     addPropertyChangeListener(TABLE_CELL_EDITOR_PROPERTY, e -> GridUtil.activeGridChanged(resultPanel));
+    if (myIsFrozenStrip) {
+      myFloatingToolbar = null;
+    }
+    else {
+      TableSelectionModel.install(this, myResultPanel);
+      TableGoToRowHelper.install(this, myResultPanel);
+      TableAggregatorWidgetHelper.install(this, myResultPanel);
+      TablePositionWidgetHelper.install(this, myResultPanel);
+      TableScrollPositionManager.install(this, myResultPanel);
 
-    TableSelectionModel.install(this, myResultPanel);
-    TableGoToRowHelper.install(this, myResultPanel);
-    TableAggregatorWidgetHelper.install(this, myResultPanel);
-    TablePositionWidgetHelper.install(this, myResultPanel);
-    TableScrollPositionManager.install(this, myResultPanel);
-
-    myFloatingToolbar = new TableFloatingToolbar(this, myResultPanel, myResultPanel.getCoroutineScope());
-
+      myFloatingToolbar = new TableFloatingToolbar(this, myResultPanel, myResultPanel.getCoroutineScope());
+    }
     getColumnModel().getSelectionModel().addListSelectionListener(e -> myGrower.reset());
 
-    myResultPanel.addDataGridListener(new DataGridListener() {
-      @Override
-      public void onValueEdited(DataGrid dataGrid, @Nullable Object object) {
-        myCommonValue = Ref.create(object);
-      }
-    }, this);
+    if (!myIsFrozenStrip) {
+      myResultPanel.addDataGridListener(new DataGridListener() {
+        @Override
+        public void onValueEdited(DataGrid dataGrid, @Nullable Object object) {
+          myCommonValue = Ref.create(object);
+        }
+      }, this);
+    }
 
     addSelectionChangedListener(isAdjusting -> {
-      getScrollPane().repaint();
+      JScrollPane scrollPane = getScrollPane();
+      if (scrollPane != null) scrollPane.repaint();
     });
     new UnparsedValueHoverListener(CENTER, this).addTo(this);
 
     setShowHorizontalLines(false);
 
-    var moveColumnListener = new MoveColumnListener(myResultPanel, this);
-    getTableHeader().addMouseListener(moveColumnListener);
-    columnModel.addColumnModelListener(moveColumnListener);
-
-    if (myResultPanel instanceof DataGridWithNestedTables dataGridWithNestedTables &&
-        dataGridWithNestedTables.isNestedTableSupportEnabled()) {
-      addMouseListener(new MouseAdapter() {
-        @Override
-        public void mouseClicked(MouseEvent e) {
-          if (e.getButton() == MouseEvent.BUTTON3) return;
-          ModelIndex<GridRow> row = ViewIndex.forRow(myResultPanel, rowAtPoint(e.getPoint())).toModel(myResultPanel);
-          ModelIndex<GridColumn> col = ViewIndex.forColumn(myResultPanel, columnAtPoint(e.getPoint())).toModel(myResultPanel);
-          if (dataGridWithNestedTables.onCellClick(row, col)) {
-            e.consume();
-          }
-        }
-      });
+    if (!myIsFrozenStrip) {
+      var moveColumnListener = new MoveColumnListener(myResultPanel, this);
+      getTableHeader().addMouseListener(moveColumnListener);
+      columnModel.addColumnModelListener(moveColumnListener);
+      myFrozenColumnsController.installColumnResizeHandle();
     }
+
+    installNestedTableClickHandler();
+  }
+
+  private int adjustColumnMoveTarget(int fromIndex, int targetIndex) {
+    return myFrozenColumnsController.adjustColumnMoveTarget(this, fromIndex, targetIndex);
+  }
+
+  private void installNestedTableClickHandler() {
+    if (!(myResultPanel instanceof DataGridWithNestedTables dataGridWithNestedTables) ||
+        !dataGridWithNestedTables.isNestedTableSupportEnabled()) {
+      return;
+    }
+    addMouseListener(new MouseAdapter() {
+      @Override
+      public void mouseClicked(MouseEvent e) {
+        if (e.getButton() == MouseEvent.BUTTON3) return;
+        int viewRow = rowAtPoint(e.getPoint());
+        int viewColumn = columnAtPoint(e.getPoint());
+        int modelRow = getRawIndexConverter().row2Model().applyAsInt(viewRow);
+        int modelColumn = getRawIndexConverter().column2Model().applyAsInt(viewColumn);
+        if (modelRow < 0 || modelColumn < 0) return;
+        if (dataGridWithNestedTables.onCellClick(ModelIndex.forRow(myResultPanel, modelRow),
+                                                 ModelIndex.forColumn(myResultPanel, modelColumn))) {
+          e.consume();
+        }
+      }
+    });
+  }
+
+  public boolean isSecondary() {
+    return myIsFrozenStrip;
+  }
+
+  public boolean hasFrozenColumns() {
+    return !myIsFrozenStrip && myFrozenColumnsController.hasFrozenColumns();
+  }
+
+  public boolean isCellComponent(@Nullable Component component) {
+    return myIsFrozenStrip ? component == this : myFrozenColumnsController.isCellComponent(component);
+  }
+
+  @TestOnly
+  public @Nullable TableResultView getFrozenView() {
+    return myIsFrozenStrip ? null : myFrozenColumnsController.getFrozenView();
+  }
+
+  private @Nullable TableResultView getPairedFrozenView() {
+    return myIsFrozenStrip || myFrozenColumnsController == null ? null : myFrozenColumnsController.getFrozenView();
+  }
+
+  private @Nullable TableResultView getPrimaryView() {
+    return myIsFrozenStrip && myFrozenColumnsController != null ? myFrozenColumnsController.getPrimaryView() : null;
+  }
+
+  private @NotNull TableResultView getUnifiedSelectionView() {
+    TableResultView primaryView = getPrimaryView();
+    return primaryView == null ? this : primaryView;
+  }
+
+  /** Whether a pinned cell is being edited in the frozen region, so the grid reports editing regardless of view. */
+  public boolean isEditingInFrozenView() {
+    return !myIsFrozenStrip && myFrozenColumnsController.isEditingInFrozenView();
+  }
+
+  /** X (in the scroll pane's coordinates) of the frozen columns' trailing edge, where the divider is drawn, or -1. */
+  public int getFrozenColumnsRightEdge() {
+    return myIsFrozenStrip ? -1 : myFrozenColumnsController.getFrozenColumnsRightEdge();
   }
 
   @Override
@@ -345,6 +433,8 @@ public final class TableResultView extends JBTableWithResizableCells
       setIntercellSpacing(new Dimension(getIntercellSpacing().width, 1));
     }
     super.setShowHorizontalLines(v);
+    TableResultView frozenView = getPairedFrozenView();
+    if (frozenView != null) frozenView.setShowHorizontalLines(v);
   }
 
   @Override
@@ -353,6 +443,8 @@ public final class TableResultView extends JBTableWithResizableCells
       setIntercellSpacing(new Dimension(1, getIntercellSpacing().height));
     }
     super.setShowVerticalLines(showVerticalLines);
+    TableResultView frozenView = getPairedFrozenView();
+    if (frozenView != null) frozenView.setShowVerticalLines(showVerticalLines);
   }
 
   @Override
@@ -362,6 +454,8 @@ public final class TableResultView extends JBTableWithResizableCells
       setShowHorizontalLines(false);
       setShowVerticalLines(true);
     }
+    TableResultView frozenView = getPairedFrozenView();
+    if (frozenView != null) frozenView.setStriped(striped);
   }
 
   @Override
@@ -376,25 +470,66 @@ public final class TableResultView extends JBTableWithResizableCells
 
   @Override
   public void showRowNumbers(boolean v) {
-    myIsShowRowNumbers = v;
-    TableScrollPane parent = ComponentUtil.getParentOfType(TableScrollPane.class, this);
-    if (parent == null) return;
-    if (isTransposed()) {
-      parent.setRowHeaderView(myResultPanel.createRowHeader(this));
-      return;
+    if (!myIsFrozenStrip) myFrozenColumnsController.showRowNumbers(v);
+  }
+
+  /** Row-number header with its width computed now: created after rows are loaded (e.g. gutter restore on unpin) it
+   *  misses the data event that sizes it and would stay 1px wide. */
+  @NotNull GridRowHeader createSizedRowHeader() {
+    GridRowHeader header = myResultPanel.createRowHeader(this);
+    header.updatePreferredSize();
+    return header;
+  }
+
+  /**
+   * Shows the first {@code count} (leading, pinned) columns in a frozen left region that stays fixed while the rest
+   * scroll horizontally. {@code count <= 0} removes the region. The pinned columns stay in the main model but are
+   * rendered at width 0 there (their real width lives in the frozen view) so no other index/selection code changes.
+   */
+  public void setFrozenColumnCount(int count) {
+    if (!myIsFrozenStrip) myFrozenColumnsController.setFrozenColumnCount(count);
+  }
+
+  void syncAppearanceToFrozenView(@NotNull TableResultView frozenView) {
+    frozenView.setStriped(isStriped());
+    frozenView.setShowHorizontalLines(getShowHorizontalLines());
+    frozenView.setShowVerticalLines(getShowVerticalLines());
+    if (myIsTransparentColumnHeaderBg != null) {
+      frozenView.setTransparentColumnHeaderBackground(myIsTransparentColumnHeaderBg);
     }
-    if (myIsShowRowNumbers) {
-      parent.setRowHeaderView(myResultPanel.createRowHeader(this));
-    }
-    else {
-      parent.setRowHeader(null);
-    }
+    frozenView.setAllowMultilineLabel(myAllowMultilineColumnLabel);
+    frozenView.setHoveredRowHighlightMode(myHoveredRowMode);
+    frozenView.myFontSizeIncrement = myFontSizeIncrement;
+    frozenView.myFontSizeScale = myFontSizeScale;
+    frozenView.updateFonts();
+    frozenView.setRowHeight(getRowHeight());
+  }
+
+  /** A plain gesture in the frozen view collapses to one cell across both regions by reducing the main column
+   * selection to the clicked pinned column; Ctrl/Shift gestures stay additive. */
+  @Override
+  public void changeSelection(int rowIndex, int columnIndex, boolean toggle, boolean extend) {
+    super.changeSelection(rowIndex, columnIndex, toggle, extend);
+    myFrozenColumnsController.afterChangeSelection(this, columnIndex, toggle, extend);
+  }
+
+  @Override
+  protected void processMouseEvent(MouseEvent e) {
+    myFrozenColumnsController.processMouseEvent(this, e, () -> super.processMouseEvent(e));
+  }
+
+  @Override
+  protected void processMouseMotionEvent(MouseEvent e) {
+    super.processMouseMotionEvent(e);
+    myFrozenColumnsController.processMouseMotionEvent(this, e);
   }
 
   @Override
   public void setTransparentColumnHeaderBackground(boolean v) {
     myIsTransparentColumnHeaderBg = v;
     if (myColumnHeaderBgListener != null) myColumnHeaderBgListener.accept(myIsTransparentColumnHeaderBg);
+    TableResultView frozenView = getPairedFrozenView();
+    if (frozenView != null) frozenView.setTransparentColumnHeaderBackground(v);
   }
 
   public void addColumnHeaderBackgroundChangedListener(@NotNull Consumer<Boolean> listener) {
@@ -405,6 +540,8 @@ public final class TableResultView extends JBTableWithResizableCells
   @Override
   public void setAllowMultilineLabel(boolean v) {
     myAllowMultilineColumnLabel = v;
+    TableResultView frozenView = getPairedFrozenView();
+    if (frozenView != null) frozenView.setAllowMultilineLabel(v);
   }
 
   @Override
@@ -460,10 +597,45 @@ public final class TableResultView extends JBTableWithResizableCells
   public void setTransposed(boolean transposed) {
     myWasAutomaticallyTransposed = false;
     if (isTransposed() == transposed) return;
+    if (transposed) {
+      setFrozenColumnCount(0);
+      rememberUntransposedColumnWidths();
+    }
     GridUtil.saveAndRestoreSelection(myResultPanel, () -> {
       doTranspose();
       createDefaultColumnsFromModel();
+      if (!transposed) {
+        if (myResultPanel instanceof TableResultPanel resultPanel) resultPanel.restoreColumnsOrder();
+        restoreUntransposedColumnWidths();
+      }
     });
+  }
+
+  private void rememberUntransposedColumnWidths() {
+    myUntransposedColumnWidths = new Int2ObjectOpenHashMap<>();
+    TableColumnModel columns = getColumnModel();
+    for (int i = 0; i < columns.getColumnCount(); i++) {
+      TableResultViewColumn column = (TableResultViewColumn)columns.getColumn(i);
+      int width = Math.max(column.getWidth(), column.getColumnWidth());
+      myUntransposedColumnWidths.put(column.getModelIndex(), new ColumnWidthState(width, column.isWidthSetByUser()));
+    }
+  }
+
+  private void restoreUntransposedColumnWidths() {
+    if (myUntransposedColumnWidths == null) return;
+    for (Int2ObjectMap.Entry<ColumnWidthState> entry : myUntransposedColumnWidths.int2ObjectEntrySet()) {
+      ResultViewColumn resultColumn = getColumnForPersistence(ModelIndex.forColumn(myResultPanel, entry.getIntKey()));
+      if (!(resultColumn instanceof TableResultViewColumn column)) continue;
+      ColumnWidthState state = entry.getValue();
+      if (state.setByUser()) {
+        column.setColumnWidthByUser(state.width());
+      }
+      else {
+        column.setColumnWidth(state.width());
+      }
+      column.setWidth(state.width());
+    }
+    myUntransposedColumnWidths = null;
   }
 
   public boolean isEditingBlocked() {
@@ -480,22 +652,27 @@ public final class TableResultView extends JBTableWithResizableCells
   }
 
   @Override
-  public @NotNull JScrollBar getVerticalScrollBar() {
-    return getScrollPane().getVerticalScrollBar();
+  public @Nullable JScrollBar getVerticalScrollBar() {
+    JScrollPane scrollPane = getScrollPane();
+    return scrollPane == null ? null : scrollPane.getVerticalScrollBar();
   }
 
-  private @NotNull JScrollPane getScrollPane() {
-    return Objects.requireNonNull(ComponentUtil.getParentOfType((Class<? extends JScrollPane>)JScrollPane.class, this));
+  private @Nullable JScrollPane getScrollPane() {
+    return ComponentUtil.getParentOfType((Class<? extends JScrollPane>)JScrollPane.class, this);
   }
 
   @Override
-  public @NotNull JScrollBar getHorizontalScrollBar() {
-    return getScrollPane().getHorizontalScrollBar();
+  public @Nullable JScrollBar getHorizontalScrollBar() {
+    JScrollPane scrollPane = getScrollPane();
+    return scrollPane == null ? null : scrollPane.getHorizontalScrollBar();
   }
 
   @Override
   public void resetLayout() {
     myColumnLayout.resetLayout();
+    // The pinned strip has its own layout, so relayout it too.
+    TableResultView frozenView = getPairedFrozenView();
+    if (frozenView != null) frozenView.resetLayout();
   }
 
   @Override
@@ -667,6 +844,9 @@ public final class TableResultView extends JBTableWithResizableCells
     if (rowSorter != null) {
       rowSorter.setSortKeys(isTransposed() || myResultPanel.isSortViaOrderBy() ? null : createSortKeys());
     }
+    // Mirror sort keys to the frozen view's own sorter so pinned rows stay aligned.
+    TableResultView frozenView = getPairedFrozenView();
+    if (frozenView != null) frozenView.updateSortKeysFromColumnAttributes();
   }
 
   @Override
@@ -698,8 +878,10 @@ public final class TableResultView extends JBTableWithResizableCells
 
   @Override
   public void addMouseListenerToComponents(@NotNull MouseListener listener) {
-    getScrollPane().addMouseListener(listener);
+    JScrollPane scrollPane = getScrollPane();
+    if (scrollPane != null) scrollPane.addMouseListener(listener);
     addMouseListener(listener);
+    myFrozenColumnsController.addMouseListenerToComponents(listener);
   }
 
   @Override
@@ -725,7 +907,7 @@ public final class TableResultView extends JBTableWithResizableCells
     myColumnCache.retainColumns(emptyList());
     myColumnLayout.invalidateCache();
     setModel(isTransposed() ? new RegularGridTableModel(myResultPanel) : new TransposedGridTableModel(myResultPanel));
-    showRowNumbers(myIsShowRowNumbers);
+    if (!myIsFrozenStrip) myFrozenColumnsController.refreshRowNumbers();
     myResultPanel.updateSortKeysFromColumnAttributes();
     getModel().fireTableDataChanged();
   }
@@ -950,6 +1132,37 @@ public final class TableResultView extends JBTableWithResizableCells
         startEditing.actionPerformed(e);
       }
     });
+    // Cross the pin divider: TAB and Right arrow move last pinned column -> first main column; Shift-TAB and Left
+    // arrow go back. The *ExtendSelection variants grow the selection across the divider instead of collapsing it.
+    wrapColumnCrossing(actionMap, "selectNextColumnCell", true, false);
+    wrapColumnCrossing(actionMap, "selectPreviousColumnCell", false, false);
+    wrapColumnCrossing(actionMap, "selectNextColumn", true, false);
+    wrapColumnCrossing(actionMap, "selectPreviousColumn", false, false);
+    wrapColumnCrossing(actionMap, "selectNextColumnExtendSelection", true, true);
+    wrapColumnCrossing(actionMap, "selectPreviousColumnExtendSelection", false, true);
+  }
+
+  private void wrapColumnCrossing(@NotNull ActionMap actionMap, @NotNull String name, boolean forward, boolean extend) {
+    Action original = actionMap.get(name);
+    if (original == null) return;
+    actionMap.put(name, new AbstractAction() {
+      @Override
+      public void actionPerformed(ActionEvent e) {
+        boolean crossed = forward ? crossForwardAtPinBoundary(extend) : crossBackwardAtPinBoundary(extend);
+        if (!crossed) original.actionPerformed(e);
+      }
+    });
+  }
+
+  // Moving right off the last pinned column goes to the first visible main-view column on the same row. Only the frozen
+  // strip crosses forward; the main view keeps its default wrap so its last column still advances to the next row.
+  private boolean crossForwardAtPinBoundary(boolean extend) {
+    return myFrozenColumnsController.crossForwardAtPinBoundary(this, extend);
+  }
+
+  // Moving left off the first visible main-view column returns to the last pinned column on the same row.
+  private boolean crossBackwardAtPinBoundary(boolean extend) {
+    return myFrozenColumnsController.crossBackwardAtPinBoundary(this, extend);
   }
 
   @Override
@@ -966,6 +1179,7 @@ public final class TableResultView extends JBTableWithResizableCells
       }
     }
     resizeAndRepaint();
+    if (myFrozenColumnsController != null) myFrozenColumnsController.columnMarginChanged(this);
   }
 
   @Override
@@ -980,6 +1194,8 @@ public final class TableResultView extends JBTableWithResizableCells
     }
 
     super.setRowHeight(row, rowHeight);
+
+    if (myFrozenColumnsController != null) myFrozenColumnsController.syncRowHeight(this, row, rowHeight);
 
     Container parent = getParent();
     if (parent instanceof JViewport) {
@@ -1087,31 +1303,66 @@ public final class TableResultView extends JBTableWithResizableCells
   @Override
   public void dispose() {
     removeEditor();
+    if (!myIsFrozenStrip) myFrozenColumnsController.dispose();
   }
 
   @Override
   public void changeSelectedColumnsWidth(int delta) {
-    int[] columns = getSelectedColumns();
-    TableColumnModel columnModel = getColumnModel();
-    for (int column : columns) {
+    for (int column : getSelectedColumns()) {
       if (column < 0) continue;
-      ResultViewColumn tableColumn = (ResultViewColumn)columnModel.getColumn(column);
-      int width = tableColumn.getColumnWidth();
-      tableColumn.setColumnWidthByUser(Math.max(0, width + delta));
+      ResultViewColumn tableColumn = renderedColumnAt(column);
+      if (tableColumn == null) continue;
+      tableColumn.setColumnWidthByUser(Math.max(0, tableColumn.getColumnWidth() + delta));
     }
   }
 
   @Override
   public void fitColumnsToViewport() {
-    TableColumnModel columnModel = getColumnModel();
-    int columnCount = columnModel.getColumnCount();
-    if (columnCount == 0) return;
-    int availableWidth = getParent() instanceof JViewport viewport ? viewport.getExtentSize().width : getWidth();
+    int totalColumns = renderedColumnCount();
+    if (totalColumns == 0) return;
+    // Split the whole grid width across every visible column, including the pinned ones in the frozen strip.
+    int mainWidth = getParent() instanceof JViewport viewport ? viewport.getExtentSize().width : getWidth();
+    TableResultView frozenView = getPairedFrozenView();
+    int frozenWidth = frozenView == null ? 0 : Math.max(0, frozenView.getWidth());
+    int availableWidth = mainWidth + frozenWidth;
     if (availableWidth <= 0) return;
-    int columnWidth = Math.max(JBUI.scale(40), availableWidth / columnCount);
-    for (int i = 0; i < columnCount; i++) {
-      ((ResultViewColumn)columnModel.getColumn(i)).setColumnWidthByUser(columnWidth);
+    int columnWidth = Math.max(JBUI.scale(40), availableWidth / totalColumns);
+    forEachRenderedColumn(column -> column.setColumnWidthByUser(columnWidth));
+  }
+
+  /** Runs the operation over the pinned strip columns plus the visible main columns, so column actions span both. */
+  private void forEachRenderedColumn(@NotNull Consumer<ResultViewColumn> op) {
+    TableResultView frozenView = getPairedFrozenView();
+    if (frozenView != null) {
+      TableColumnModel frozenModel = frozenView.getColumnModel();
+      for (int i = 0; i < frozenModel.getColumnCount(); i++) op.accept((ResultViewColumn)frozenModel.getColumn(i));
     }
+    TableColumnModel columnModel = getColumnModel();
+    for (int i = 0; i < columnModel.getColumnCount(); i++) {
+      if (isColumnFrozenHidden(i)) continue;
+      op.accept((ResultViewColumn)columnModel.getColumn(i));
+    }
+  }
+
+  private int renderedColumnCount() {
+    TableResultView frozenView = getPairedFrozenView();
+    int count = frozenView == null ? 0 : frozenView.getColumnModel().getColumnCount();
+    TableColumnModel columnModel = getColumnModel();
+    for (int i = 0; i < columnModel.getColumnCount(); i++) {
+      if (!isColumnFrozenHidden(i)) count++;
+    }
+    return count;
+  }
+
+  /** The column controlling the rendered width at this view index: its frozen counterpart if pinned, else the main one. */
+  private @Nullable ResultViewColumn renderedColumnAt(int viewColumn) {
+    TableResultView frozenView = getPairedFrozenView();
+    if (frozenView != null && isColumnFrozenHidden(viewColumn)) {
+      TableColumnModel frozenModel = frozenView.getColumnModel();
+      return viewColumn < frozenModel.getColumnCount() ? (ResultViewColumn)frozenModel.getColumn(viewColumn) : null;
+    }
+    TableColumnModel columnModel = getColumnModel();
+    return viewColumn < columnModel.getColumnCount() ? (ResultViewColumn)columnModel.getColumn(viewColumn) : null;
   }
 
   @Override
@@ -1119,13 +1370,9 @@ public final class TableResultView extends JBTableWithResizableCells
     for (TableResultViewColumn column : myColumnCache) {
       column.clearWidthSetByUser();
     }
-  }
-
-  @Override
-  public void resetColumnWidths() {
-    for (TableResultViewColumn column : myColumnCache) {
-      column.clearWidthSetByUser();
-    }
+    // The frozen strip keeps its own column cache, so reset it too.
+    TableResultView frozenView = getPairedFrozenView();
+    if (frozenView != null) frozenView.resetColumnWidths();
   }
 
   @Override
@@ -1187,6 +1434,12 @@ public final class TableResultView extends JBTableWithResizableCells
   }
 
   static class MyTableColumnModel extends DefaultTableColumnModel {
+    private @Nullable IntBinaryOperator myMoveTargetAdjuster;
+
+    private void setMoveTargetAdjuster(@NotNull IntBinaryOperator adjuster) {
+      myMoveTargetAdjuster = adjuster;
+    }
+
     @Override
     public void addColumn(TableColumn aColumn) {
       if (!(aColumn instanceof TableResultViewColumn)) {
@@ -1198,6 +1451,12 @@ public final class TableResultView extends JBTableWithResizableCells
     @Override
     public TableResultViewColumn getColumn(int columnIndex) {
       return (TableResultViewColumn)super.getColumn(columnIndex);
+    }
+
+    @Override
+    public void moveColumn(int columnIndex, int newIndex) {
+      int adjustedIndex = myMoveTargetAdjuster == null ? newIndex : myMoveTargetAdjuster.applyAsInt(columnIndex, newIndex);
+      super.moveColumn(columnIndex, adjustedIndex);
     }
 
     /**
@@ -1240,7 +1499,9 @@ public final class TableResultView extends JBTableWithResizableCells
       var gridColumn = myResultPanel.getDataModel(DATA_WITH_MUTATIONS).getColumn(columnIdx);
       var isHierarchicalColumn = gridColumn instanceof HierarchicalGridColumn;
 
-      var currentViewIdx = columnIdx.toView(myResultPanel).value;
+      // Map to this view's own column index; the grid-level index would overrun the smaller frozen column model.
+      var currentViewIdx = myRawIndexConverter.column2View().applyAsInt(columnIdx.value);
+      if (currentViewIdx < 0 || currentViewIdx >= columnModel.getColumnCount()) return;
       TableResultViewColumn tableColumn = ((MyTableColumnModel)columnModel).getColumn(currentViewIdx);
       var offsetX = calculateClickedColumnX(TableResultView.this, currentViewIdx);
 
@@ -1251,7 +1512,7 @@ public final class TableResultView extends JBTableWithResizableCells
       var filterLabel = currentHeader.filterLabel;
       var sortLabel = currentHeader.myIconLabels.isEmpty() ?
                       null :
-                      currentHeader.myIconLabels.get(currentHeader.myIconLabels.size() - 1);
+                      currentHeader.myIconLabels.getLast();
 
       var previousFilterLabelIdx = hoveredFilterLabelIdx;
       if (filterLabel.getBounds().contains(relativePoint)) {
@@ -1425,6 +1686,9 @@ public final class TableResultView extends JBTableWithResizableCells
   public void updateRowFilter() {
     DefaultRowSorter<? extends TableModel, Integer> sorter = (DefaultRowSorter<? extends TableModel, Integer>)getRowSorter();
     sorter.setRowFilter(createFilter());
+    // The frozen region is a separate table with its own sorter; keep its row filtering in step so rows stay aligned.
+    TableResultView frozenView = getPairedFrozenView();
+    if (frozenView != null) frozenView.updateRowFilter();
   }
 
   private @NotNull RowFilter<TableModel, Integer> createFilter() {
@@ -1472,15 +1736,16 @@ public final class TableResultView extends JBTableWithResizableCells
     GridCellRendererFactories.get(myResultPanel).reinitSettings();
     dropCaches();
     updateFonts();
+    TableResultView frozenView = getPairedFrozenView();
+    if (frozenView != null) {
+      frozenView.dropCaches();
+      frozenView.updateFonts();
+    }
   }
 
   @Override
   public boolean isCellEditable(int row, int column) {
     return myResultPanel.isCellEditingAllowed();
-  }
-
-  public void withCurrentValue(@Nullable Object value, @NotNull Runnable r) {
-    withCurrentValue(value, true, r);
   }
 
   public void withCurrentValue(@Nullable Object value, boolean shouldMoveFocus, @NotNull Runnable r) {
@@ -1598,6 +1863,8 @@ public final class TableResultView extends JBTableWithResizableCells
   @Override
   public void globalSchemeChange(@Nullable EditorColorsScheme scheme) {
     updateFonts();
+    TableResultView frozenView = getPairedFrozenView();
+    if (frozenView != null) frozenView.globalSchemeChange(scheme);
   }
 
   @Override
@@ -1622,6 +1889,9 @@ public final class TableResultView extends JBTableWithResizableCells
     myFontSizeScale = newScale;
 
     updateFonts();
+    // Zoom the pinned strip in step so both tables keep the same font and row height.
+    TableResultView frozenView = getPairedFrozenView();
+    if (frozenView != null) frozenView.changeFontSize(increment, scale);
   }
 
   private void updateFonts() {
@@ -1640,6 +1910,8 @@ public final class TableResultView extends JBTableWithResizableCells
       myResultPanel.trueLayout();
       layoutColumns();
     }
+    TableResultView frozenView = getPairedFrozenView();
+    if (frozenView != null) frozenView.uiSettingsChanged(uiSettings);
   }
 
   private boolean changeHeaderFont(UISettings settings) {
@@ -1727,8 +1999,9 @@ public final class TableResultView extends JBTableWithResizableCells
 
   @Override
   public Object getValueAt(int row, int column) {
-    boolean commonValue = isEditing() && isCellSelected(row, column) && isMultiEditingAllowed();
-    return commonValue ? myCommonValue.get() : super.getValueAt(row, column);
+    Ref<Object> commonValue = getSharedCommonValue();
+    boolean useCommonValue = commonValue != null && isEditing() && isCellSelected(row, column) && isMultiEditingAllowed();
+    return useCommonValue ? commonValue.get() : super.getValueAt(row, column);
   }
 
   @Override
@@ -1738,7 +2011,14 @@ public final class TableResultView extends JBTableWithResizableCells
     }
     finally {
       myCommonValue = null;
+      TableResultView primaryView = getPrimaryView();
+      if (primaryView != null) primaryView.myCommonValue = null;
     }
+  }
+
+  private @Nullable Ref<Object> getSharedCommonValue() {
+    TableResultView primaryView = getPrimaryView();
+    return primaryView != null ? primaryView.myCommonValue : myCommonValue;
   }
 
   @Override
@@ -1780,7 +2060,8 @@ public final class TableResultView extends JBTableWithResizableCells
     if (e.isPopupTrigger()) {
       if (myResultPanel.isHeaderSelecting() && !isTransposed()) {
         int tableViewColumnIdx = myRawIndexConverter.column2View().applyAsInt(columnIdx.value);
-        selectViewColumnInterval(tableViewColumnIdx, e);
+        // Right-clicking a column already in the selection keeps it; only a click outside collapses to that column.
+        if (!isSelectedColumnInOwner(tableViewColumnIdx)) selectViewColumnInterval(tableViewColumnIdx, e);
       }
 
       invokeColumnPopup(columnIdx, e.getComponent(), new Point(e.getX(), e.getY()));
@@ -1793,7 +2074,9 @@ public final class TableResultView extends JBTableWithResizableCells
       handleClickOnHierarchicalColumnHeader(hierarchicalColumn, columnIdx, e);
     }
     else {
-      var currentViewIdx = columnIdx.toView(myResultPanel).value;
+      // Map to this view's own column index; the grid-level index would overrun the smaller frozen column model.
+      var currentViewIdx = myRawIndexConverter.column2View().applyAsInt(columnIdx.value);
+      if (currentViewIdx < 0 || currentViewIdx >= columnModel.getColumnCount()) return;
       TableResultViewColumn tableColumn = ((MyTableColumnModel)columnModel).getColumn(currentViewIdx);
       var offsetX = calculateClickedColumnX(this, currentViewIdx);
 
@@ -1804,7 +2087,7 @@ public final class TableResultView extends JBTableWithResizableCells
       var filterLabel = currentHeader.filterLabel;
       var sortLabel = currentHeader.myIconLabels.isEmpty() ?
                       null :
-                      currentHeader.myIconLabels.get(currentHeader.myIconLabels.size() - 1);
+                      currentHeader.myIconLabels.getLast();
 
       if (filterLabel.getBounds().contains(relativePoint)) {
         var popup = ColumnLocalFilterAction.createFilterPopup(myResultPanel, columnIdx);
@@ -1974,7 +2257,10 @@ public final class TableResultView extends JBTableWithResizableCells
 
   void invokeColumnPopup(@NotNull ModelIndex<GridColumn> columnIdx, @NotNull Component component, @NotNull Point point) {
     if (myColumnHeaderPopupActions != ActionGroup.EMPTY_GROUP) {
-      myClickedHeaderColumnIdx = columnIdx;
+      // The panel reads the context column from the primary view, so a frozen (secondary) header must set it there.
+      TableResultView primaryView = getPrimaryView();
+      TableResultView contextOwner = primaryView != null ? primaryView : this;
+      contextOwner.myClickedHeaderColumnIdx = columnIdx;
       myClickedHeaderPoint = point;
       ListPopup popupMenu = JBPopupFactory.getInstance()
         .createActionGroupPopup(null, myColumnHeaderPopupActions, DataManager.getInstance().getDataContext(getComponent()),
@@ -1983,9 +2269,9 @@ public final class TableResultView extends JBTableWithResizableCells
         @Override
         public void onClosed(@NotNull LightweightWindowEvent event) {
           SwingUtilities.invokeLater(() -> {
-            if (myClickedHeaderColumnIdx.equals(columnIdx)) {
+            if (contextOwner.myClickedHeaderColumnIdx.equals(columnIdx)) {
               // if not clicked on another column
-              myClickedHeaderColumnIdx = ModelIndex.forColumn(myResultPanel, -1);
+              contextOwner.myClickedHeaderColumnIdx = ModelIndex.forColumn(myResultPanel, -1);
               myClickedHeaderPoint = null;
             }
           });
@@ -1995,7 +2281,22 @@ public final class TableResultView extends JBTableWithResizableCells
     }
   }
 
+  // Whether the view column is selected in the view owning the real selection model (the primary view for a frozen strip).
+  private boolean isSelectedColumnInOwner(int viewColumn) {
+    if (viewColumn < 0) return false;
+    TableResultView primaryView = getPrimaryView();
+    TableResultView owner = primaryView != null ? primaryView : this;
+    return owner.getColumnModel().getSelectionModel().isSelectedIndex(viewColumn);
+  }
+
   private void selectViewColumnInterval(int viewColumn, @NotNull MouseEvent e) {
+    if (myIsFrozenStrip) {
+      // The frozen view has only a no-op selection model; route whole-column selection through the primary view,
+      // where pinned columns share the same leading view index (identity mirror), so it highlights in both regions.
+      TableResultView primaryView = getPrimaryView();
+      if (primaryView != null) primaryView.selectViewColumnInterval(viewColumn, e);
+      return;
+    }
     boolean interval = GridUtil.isIntervalModifierSet(e);
     boolean exclusive = GridUtil.isExclusiveModifierSet(e);
     TableSelectionModel selectionModel = ObjectUtils.tryCast(SelectionModelUtil.get(myResultPanel, this), TableSelectionModel.class);
@@ -2031,6 +2332,15 @@ public final class TableResultView extends JBTableWithResizableCells
   @Override
   public @Nullable ResultViewColumn getLayoutColumn(@NotNull ModelIndex<?> column) {
     return getLayoutColumn(column, column.toView(myResultPanel));
+  }
+
+  @Override
+  public @Nullable ResultViewColumn getColumnForPersistence(@NotNull ModelIndex<?> column) {
+    ResultViewColumn layoutColumn = getLayoutColumn(column);
+    TableResultView frozenView = getPairedFrozenView();
+    if (layoutColumn == null || !layoutColumn.isFrozenHidden() || frozenView == null) return layoutColumn;
+    int frozenViewIndex = frozenView.getRawIndexConverter().column2View().applyAsInt(column.asInteger());
+    return frozenViewIndex < 0 ? layoutColumn : (ResultViewColumn)frozenView.getColumnModel().getColumn(frozenViewIndex);
   }
 
   public @Nullable ResultViewColumn getLayoutColumn(@NotNull ModelIndex<?> column, @NotNull ViewIndex<?> viewColumnIdx) {
@@ -2088,16 +2398,25 @@ public final class TableResultView extends JBTableWithResizableCells
 
   @Override
   public boolean stopEditing() {
+    // A pinned cell edits in the frozen view, but stopEditing() routes here; commit through the view holding the editor.
+    TableResultView frozenView = getPairedFrozenView();
+    if (getCellEditor() == null && frozenView != null && frozenView.isEditing()) {
+      return frozenView.stopEditing();
+    }
     TableCellEditor editor = getCellEditor();
     if (editor == null) return true;
 
+    boolean multiEditingAllowed = isMultiEditingAllowed();
+    TableResultView selectionView = getUnifiedSelectionView();
+    TableResultView columnIndexView = multiEditingAllowed ? selectionView : this;
     int[] columnDataIdx = Arrays.stream(
-      !isMultiEditingAllowed() ? new int[]{getEditingColumn()} : getSelectedColumns()
-    ).map(this::convertColumnIndexToModel).toArray();
+      !multiEditingAllowed ? new int[]{getEditingColumn()} : selectionView.getSelectedColumns()
+    ).map(columnIndexView::convertColumnIndexToModel).toArray();
 
+    TableResultView rowIndexView = multiEditingAllowed ? selectionView : this;
     int[] rowDataIdx = Arrays.stream(
-      !isMultiEditingAllowed() ? new int[]{getEditingRow()} : getSelectedRows()
-    ).map(this::convertRowIndexToModel).toArray();
+      !multiEditingAllowed ? new int[]{getEditingRow()} : selectionView.getSelectedRows()
+    ).map(rowIndexView::convertRowIndexToModel).toArray();
 
     ModelIndexSet<GridRow> myEditingRowIdx = ModelIndexSet.forRows(myResultPanel, isTransposed() ? columnDataIdx : rowDataIdx);
     ModelIndexSet<GridColumn> myEditingColumnIdx = ModelIndexSet.forColumns(myResultPanel, isTransposed() ? rowDataIdx : columnDataIdx);
@@ -2111,6 +2430,10 @@ public final class TableResultView extends JBTableWithResizableCells
     if (editor != null) {
       editor.cancelCellEditing();
     }
+    else {
+      TableResultView frozenView = getPairedFrozenView();
+      if (frozenView != null && frozenView.isEditing()) frozenView.cancelEditing();
+    }
   }
 
   @Override
@@ -2123,28 +2446,49 @@ public final class TableResultView extends JBTableWithResizableCells
     int leadRow = getSelectionModel().getLeadSelectionIndex();
     int leadColumn = getColumnModel().getSelectionModel().getLeadSelectionIndex();
     if (leadRow == -1 || leadColumn == -1) return;
+    // A pinned column is hidden here, so edit it in the frozen view. Use the exact lead cell (indices match in both
+    // views), not the frozen view's own lead, which can differ with several pinned columns selected.
+    TableResultView frozenView = getPairedFrozenView();
+    if (frozenView != null && isColumnFrozenHidden(leadColumn)) {
+      TableUtil.editCellAt(frozenView, leadRow, leadColumn);
+      return;
+    }
     TableUtil.editCellAt(this, leadRow, leadColumn);
   }
 
   @Override
   public void editSelectedCellWithValue(Object value) {
-    withCurrentValue(value, this::editSelectedCell);
+    editSelectedCellWithValue(value, true);
   }
 
   public void editSelectedCellWithValue(Object value, boolean shouldMoveFocus) {
+    int leadColumn = getColumnModel().getSelectionModel().getLeadSelectionIndex();
+    TableResultView frozenView = getPairedFrozenView();
+    if (frozenView != null && isColumnFrozenHidden(leadColumn)) {
+      int leadRow = getSelectionModel().getLeadSelectionIndex();
+      if (leadRow < 0) return;
+      frozenView.withCurrentValue(value, shouldMoveFocus, () -> TableUtil.editCellAt(frozenView, leadRow, leadColumn));
+      return;
+    }
     withCurrentValue(value, shouldMoveFocus, this::editSelectedCell);
+  }
+
+  private boolean isColumnFrozenHidden(int viewColumn) {
+    return viewColumn >= 0 && viewColumn < getColumnModel().getColumnCount() &&
+           getColumnModel().getColumn(viewColumn) instanceof TableResultViewColumn column && column.isFrozenHidden();
   }
 
   @Override
   public boolean isMultiEditingAllowed() {
-    int[] selectedColumns = isTransposed() ? getSelectedRows() : getSelectedColumns();
-    int[] selectedRows = isTransposed() ? getSelectedColumns() : getSelectedRows();
+    TableResultView selectionView = getUnifiedSelectionView();
+    int[] selectedColumns = isTransposed() ? selectionView.getSelectedRows() : selectionView.getSelectedColumns();
+    int[] selectedRows = isTransposed() ? selectionView.getSelectedColumns() : selectionView.getSelectedRows();
     ModelIndexSet<GridColumn> indexSet = ViewIndexSet.forColumns(myResultPanel, selectedColumns).toModel(myResultPanel);
     List<GridColumn> columns = myResultPanel.getDataModel(DataAccessType.DATABASE_DATA).getColumns(indexSet);
     GridColumn uniqueColumn = GridHelper.get(myResultPanel).findUniqueColumn(myResultPanel, columns);
     GridTableCellEditor editor = ObjectUtils.tryCast(getCellEditor(), GridTableCellEditor.class);
     boolean uniqueOk = uniqueColumn == null || selectedRows.length == 1 || (editor != null && editor.allowsUniqueMultiEdit());
-    return myCommonValue != null &&
+    return getSharedCommonValue() != null &&
            uniqueOk &&
            GridHelper.get(myResultPanel).canEditTogether(myResultPanel, columns);
   }
@@ -2247,8 +2591,9 @@ public final class TableResultView extends JBTableWithResizableCells
                           @NotNull GridRequestSource source,
                           @Nullable Object metadata) {
     boolean allowed = isMultiEditingAllowed();
-    int[] rows = allowed ? getSelectedRows() : new int[]{viewRowIdx};
-    int[] columns = allowed ? getSelectedColumns() : new int[]{viewColumnIdx};
+    TableResultView selectionView = getUnifiedSelectionView();
+    int[] rows = allowed ? selectionView.getSelectedRows() : new int[]{viewRowIdx};
+    int[] columns = allowed ? selectionView.getSelectedColumns() : new int[]{viewColumnIdx};
     ViewIndexSet<GridRow> rowsSet = ViewIndexSet.forRows(myResultPanel, isTransposed() ? columns : rows);
     ViewIndexSet<GridColumn> columnsSet = ViewIndexSet.forColumns(myResultPanel, isTransposed() ? rows : columns);
     GridTableCellEditor editor = ObjectUtils.tryCast(getCellEditor(), GridTableCellEditor.class);
@@ -3128,8 +3473,10 @@ public final class TableResultView extends JBTableWithResizableCells
 
   @Override
   public void resetScroll() {
-    getHorizontalScrollBar().setValue(0);
-    getVerticalScrollBar().setValue(0);
+    JScrollBar horizontal = getHorizontalScrollBar();
+    if (horizontal != null) horizontal.setValue(0);
+    JScrollBar vertical = getVerticalScrollBar();
+    if (vertical != null) vertical.setValue(0);
   }
 
   @Override
@@ -3148,6 +3495,8 @@ public final class TableResultView extends JBTableWithResizableCells
   @Override
   public void setHoveredRowHighlightMode(HoveredRowBgHighlightMode mode) {
     myHoveredRowMode = mode;
+    TableResultView frozenView = getPairedFrozenView();
+    if (frozenView != null) frozenView.setHoveredRowHighlightMode(mode);
   }
 
   public void setStatisticsHeader(StatisticsTableHeader statisticsHeader) {
